--- a/chart/cas-cif/templates/cronJobs/deploy-data.yaml
+++ b/chart/cas-cif/templates/cronJobs/deploy-data.yaml
@@ -18,28 +18,9 @@ spec:
           restartPolicy: Never
           imagePullSecrets: {{ include "cas-cif.imagePullSecrets" . | nindent 12 }}
           containers:
-            - env:
+            - env: {{ include "cas-cif.cifUserPgEnv" . | nindent 16 }}
                 - name: SQITCH_TARGET
                   value: "db:pg:"
-                - name: PGUSER
-                  valueFrom:
-                    secretKeyRef:
-                      key: database-owner-user
-                      name: {{ template "cas-cif.fullname" . }}
-                - name: PGPASSWORD
-                  valueFrom:
-                    secretKeyRef:
-                      key: database-owner-password
-                      name: {{ template "cas-cif.fullname" . }}
-                - name: PGDATABASE
-                  valueFrom:
-                    secretKeyRef:
-                      key: database-name
-                      name: {{ template "cas-cif.fullname" . }}
-                - name: PGPORT
-                  value: "5432"
-                - name: PGHOST
-                  value: {{ template "cas-cif.fullname" . }}-patroni
                 - name: SQITCH_FULLNAME
                   value: OpenShift Deployer
                 - name: SQITCH_EMAIL
