--- a/chart/cas-cif/values-dev.yaml
+++ b/chart/cas-cif/values-dev.yaml
@@ -19,17 +19,15 @@ cas-postgres:
   gcs:
     bucketSuffix: cif-backups
 
-db:
-  preUpgradeCommand: |
-    psql<<EOF
-      select pg_terminate_backend(pid) from pg_stat_activity where
-      -- don't kill my own connection!
-      pid <> pg_backend_pid()
-      -- don't kill the connections to other databases
-      and datname = '$(CIF_DATABASE)';
-      drop database if exists $(CIF_DATABASE);
-      drop user if exists $(CIF_USER);
-    EOF
+# db:
+#   preUpgradeCommand: |
+#     psql<<EOF
+#       select pg_terminate_backend(pid) from pg_stat_activity where
+#       -- don't kill my own connection!
+#       pid <> pg_backend_pid()
+#       -- don't kill the connections to other databases
+#       and datname = '$(CIF_DATABASE)';
+#     EOF
 
 cert-issue:
   airflowEndpoint: https://cas-airflow-dev.apps.silver.devops.gov.bc.ca
