--- a/app/.env.example
+++ b/app/.env.example
@@ -2,7 +2,7 @@ PORT=<Port>
 HOST=<host address>
 
 # true if we want the mocks database schema to be deployed, false otherwise
-ENABLE_DB_MOCKS=<true or false>
+ENABLE_MOCK_TIME=<true or false>
 ENABLE_DB_MOCKS_COOKIES_ONLY=<true or false>
 SITEWIDE_NOTICE= # an html notice to print at the top of the page, e.g. to identify dev/test versions of the app
 STORAGE_API_HOST= # http://localhost:8000 or uri:port pointing to storage api
