--- a/.github/actions/local-app-run/action.yaml
+++ b/.github/actions/local-app-run/action.yaml
@@ -8,17 +8,17 @@ runs:
       run: make start_pg && make create_db
     - name: deploy migrations
       shell: bash
-      run: docker run --network=host -e "PGUSER=postgres" gcr.io/ggl-cas-storage/cas-cif-schema:${{ github.sha }} sqitch deploy
+      run: docker run --network=host -e "PGUSER=postgres" gcr.io/ggl-cas-storage/cas-cif-schema:${{ github.event.pull_request.head.sha }} sqitch deploy
     - name: deploy mocks_schema migrations
       shell: bash
-      run: docker run --network=host -e "PGUSER=postgres" --workdir="/root/mocks_schema" gcr.io/ggl-cas-storage/cas-cif-schema:${{ github.sha }} sqitch deploy
+      run: docker run --network=host -e "PGUSER=postgres" --workdir="/root/mocks_schema" gcr.io/ggl-cas-storage/cas-cif-schema:${{ github.event.pull_request.head.sha }} sqitch deploy
     - name: start app
       shell: bash
-      run: docker run -d --network=host -e "PGUSER=postgres" -p 3004:3004 gcr.io/ggl-cas-storage/cas-cif-app:${{ github.sha }} "/usr/bin/env" "bash" "-c" "ENABLE_DB_MOCKS='true' SHOW_KC_LOGIN='true' yarn start ENABLE_MOCK_AUTH"
+      run: docker run -d --network=host -e "PGUSER=postgres" -p 3004:3004 gcr.io/ggl-cas-storage/cas-cif-app:${{ github.event.pull_request.head.sha }} "/usr/bin/env" "bash" "-c" "ENABLE_DB_MOCKS='true' SHOW_KC_LOGIN='true' yarn start ENABLE_MOCK_AUTH"
     - name: start minio
       shell: bash
       run: docker run -d --network=host -p 9000:9000 minio/minio:RELEASE.2021-04-22T15-44-28Z server /data
     - name: start storage api
       shell: bash
       run: | # pragma: allowlist secret
-        docker run -d --network=host -e "STORAGE_API_KEY=_doNotUseThisApiKeyInProduction_" -e "MINIO_ACCESS_KEY=minioadmin" -e "MINIO_SECRET_KEY=minioadmin" -e "MINIO_HOST_URL=minio:9000" -p 8000:8000 gcr.io/ggl-cas-storage/cas-cif-storage:${{ github.sha }}
+        docker run -d --network=host -e "STORAGE_API_KEY=_doNotUseThisApiKeyInProduction_" -e "MINIO_ACCESS_KEY=minioadmin" -e "MINIO_SECRET_KEY=minioadmin" -e "MINIO_HOST_URL=minio:9000" -p 8000:8000 gcr.io/ggl-cas-storage/cas-cif-storage:${{ github.event.pull_request.head.sha }}
