--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -125,7 +125,7 @@ jobs:
         with:
           images: ${{ matrix.image }}
           tags: |
-            type=sha,format=long,prefix=
+            type=raw,value=${{ github.event.pull_request.head.sha }}
             latest
       - name: Login to GCR
         uses: docker/login-action@v1
@@ -137,7 +137,7 @@ jobs:
         uses: actions/cache@v2
         with:
           path: /tmp/.buildx-cache
-          key: ${{ runner.os }}-buildx-${{ matrix.name }}-${{ github.sha }}
+          key: ${{ runner.os }}-buildx-${{ matrix.name }}-${{ github.event.pull_request.head.sha }}
           restore-keys: |
             ${{ runner.os }}-buildx-${{ matrix.name }}
       - name: Build image
