--- a/chart/cas-cif/templates/cronJobs/db-init.yaml
+++ b/chart/cas-cif/templates/cronJobs/db-init.yaml
@@ -2,9 +2,7 @@ apiVersion: batch/v1
 kind: CronJob
 metadata:
   name: {{ template "cas-cif.fullname" . }}-db-init
-  labels:
-    release: {{ .Release.Name }}
-{{ include "cas-cif.labels" . | indent 4 }}
+  labels: {{ include "cas-cif.labels" . | nindent 4 }}
 spec:
   suspend: true # This cron job is intended to be triggered manually
   schedule: "* * * * *"
@@ -14,52 +12,27 @@ spec:
       activeDeadlineSeconds: 600
       template:
         metadata:
-          labels:
-            name: {{ template "cas-cif.fullname" . }}-db-init
-            release: {{ .Release.Name }}
-{{ include "cas-cif.labels" . | indent 12 }}
+          labels: {{ include "cas-cif.labels" . | nindent 12 }}
+          name: {{ template "cas-cif.fullname" . }}-db-init
         spec:
           restartPolicy: Never
           imagePullSecrets: {{ include "cas-cif.imagePullSecrets" . | nindent 12 }}
           containers:
-            - env:
-                - name: PGDATABASE
-                  value: postgres
-                - name: PGUSER
-                  value: postgres
-                - name: PGPASSWORD
-                  valueFrom:
-                    secretKeyRef:
-                      key: password-superuser
-                      name: {{ template "cas-cif.fullname" . }}-patroni
-                - name: PGPORT
-                  value: "5432"
-                - name: PGHOST
-                  value: {{ template "cas-cif.fullname" . }}-patroni
+            - env: {{ include "cas-cif.superUserPgEnv" . | nindent 16 }}
                 - name: CIF_USER
                   valueFrom:
                     secretKeyRef:
-                      key: database-owner-user
-                      name: {{ template "cas-cif.fullname" . }}
-                - name: CIF_PASSWORD
-                  valueFrom:
-                    secretKeyRef:
-                      key: database-owner-password
-                      name: {{ template "cas-cif.fullname" . }}
-                - name: CIF_DATABASE
-                  valueFrom:
-                    secretKeyRef:
-                      key: database-name
-                      name: {{ template "cas-cif.fullname" . }}
+                      key: user
+                      name: {{ template "cas-cif.dbSecret" . }}
               name: {{ template "cas-cif.fullname" . }}-db-init
               image: {{ .Values.image.psql.repository }}:{{ default .Values.defaultImageTag .Values.image.psql.tag }}
               imagePullPolicy: {{ default .Values.defaultImagePullPolicy .Values.image.psql.pullPolicy }}
               resources:
                 limits:
-                  cpu: 1000m
+                  cpu: 50m
                   memory: 128Mi
                 requests:
-                  cpu: 100m
+                  cpu: 10m
                   memory: 64Mi
               command:
                 - /usr/bin/env
@@ -67,9 +40,7 @@ spec:
                 - -c
                 - |
                   set -euo pipefail;
-                  create-user-db -d $(CIF_DATABASE) -u $(CIF_USER) -p $(CIF_PASSWORD) --owner;
-                  alter-role $(CIF_USER) createrole;
-                  psql -d $(CIF_DATABASE) -v "ON_ERROR_STOP=1"<<EOF
+                  psql -v "ON_ERROR_STOP=1"<<EOF
                     create extension if not exists postgres_fdw;
                     grant usage on foreign data wrapper postgres_fdw to $(CIF_USER);
                   EOF
