--- a/chart/cas-cif/values-dev.yaml
+++ b/chart/cas-cif/values-dev.yaml
@@ -4,7 +4,7 @@ app:
     content: <div class="alert alert-warning">This is the DEV environment.</div>
 
 nginx-sidecar:
-  hostName: cas-cif-dev.apps.silver.devops.gov.bc.ca
+  hostName: dev.cif.gov.bc.ca
 
 db:
   preUpgradeCommand: |
