--- a/chart/cas-cif/templates/app-deployment.yaml
+++ b/chart/cas-cif/templates/app-deployment.yaml
@@ -74,7 +74,7 @@ spec:
           - name: SENTRY_RELEASE
             value: {{ .Values.image.app.tag }}
           - name: SHOW_KC_LOGIN
-            value: {{ .Values.app.showKcLogin | quote }}
+            value: {{ .Values.app.showKCLogin | quote }}
           - name: NAMESPACE
             valueFrom:
               fieldRef:
