--- a/chart/cas-cif/templates/postgres.yaml
+++ b/chart/cas-cif/templates/postgres.yaml
@@ -89,3 +89,7 @@ spec:
             full: "0 8 * * *"
             # run incremental backup every 4 hours, except at 8am UTC (when the full backup is running)
             incremental: "0 0,4,12,16,20 * * *"
+  monitoring:
+    pgmonitor:
+      exporter:
+        image: registry.developers.crunchydata.com/crunchydata/crunchy-postgres-exporter:ubi8-5.0.4-0
