docs: documentation on how to run the API containers locally

--- a/storage/.env.example
+++ b/storage/.env.example
@@ -1,5 +1,5 @@
-STORAGE_API_KEY=''
+STORAGE_API_KEY=<'_doNotUseThisApiKeyInProduction_' needs to be 32 characters long>
 ENABLE_UVICORN_ACCESS_LOG=True
-MINIO_ACCESS_KEY=''
-MINIO_SECRET_KEY=''
-MINIO_HOST_URL=''
+MINIO_ACCESS_KEY=<some secret username>
+MINIO_SECRET_KEY=<some secret password>
+MINIO_HOST_URL=< 'localhost:9000' or 'minio:9000' if running the minikube OSX strategy >
