--- a/storage/local.env.example
+++ b/storage/local.env.example
@@ -1,2 +1,2 @@
-MINIO_ROOT_USER=''
-MINIO_ROOT_PASSWORD=''
+MINIO_ROOT_USER=< same as in the .env file >
+MINIO_ROOT_PASSWORD=< same as in the .env file >
