--- a/storage/.env.example
+++ b/storage/.env.example
@@ -1,5 +1,5 @@
 STORAGE_API_KEY=<'_doNotUseThisApiKeyInProduction_' needs to be 32 characters long>
 ENABLE_UVICORN_ACCESS_LOG=True
-MINIO_ACCESS_KEY=<some secret username>
-MINIO_SECRET_KEY=<some secret password>
-MINIO_HOST_URL=< 'localhost:9000' or 'minio:9000' if running the minikube OSX strategy >
+MINIO_ACCESS_KEY=<secret username (at least 3 characters)>
+MINIO_SECRET_KEY=<secret password (at least 8 characters)>
+MINIO_HOST_URL=<'minio:9000' if running with docker-compose>
