--- a/chart/cas-cif/values-test.yaml
+++ b/chart/cas-cif/values-test.yaml
@@ -7,14 +7,15 @@ nginx-sidecar:
 
 db:
   preUpgradeCommand: |
-    psql<<EOF
+    psql -v "ON_ERROR_STOP=1" <<EOF
       select pg_terminate_backend(pid) from pg_stat_activity where
       -- don't kill my own connection!
       pid <> pg_backend_pid()
       -- don't kill the connections to other databases
-      and datname = '$(CIF_DATABASE)';
-      drop database if exists $(CIF_DATABASE);
-      drop user if exists $(CIF_USER);
+      and datname = '$(PGDATABASE)';
+      drop schema sqitch if exists cascade;
+      drop schema cif if exists cascade;
+      drop schema cif_private if exists cascade;
     EOF
 
 cert-issue:
