fix: don't fail silently when deploying dev data

--- a/chart/cas-cif/templates/cronJobs/deploy-data.yaml
+++ b/chart/cas-cif/templates/cronJobs/deploy-data.yaml
@@ -49,6 +49,6 @@ spec:
                   sqitch deploy;
                   if [[ "$NAMESPACE" == *-dev || "$NAMESPACE" == *-test ]]; then
                   for file in data/dev/*.sql; do
-                    psql -d cif -f "${file}";
+                    psql -v "ON_ERROR_STOP=1" -d cif -f "${file}";
                   done;
                   fi;
