--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -124,6 +124,7 @@ jobs:
           tags: |
             type=sha,format=long,prefix=
             latest
+            type=ref,event=pr
       - name: Login to GCR
         uses: docker/login-action@v1
         with:
