chore: update postgraphile.tags.json5 and graphql schema

--- a/app/postgraphile.tags.json5
+++ b/app/postgraphile.tags.json5
@@ -41,6 +41,36 @@
           omit: ["create"],
         },
       },
+      "cif.reporting_requirement": {
+        tags: {
+          omit: ["create", "update", "delete"],
+        },
+      },
+      "cif.budget_item": {
+        tags: {
+          omit: ["create", "update", "delete"],
+        },
+      },
+      "cif.payment": {
+        tags: {
+          omit: ["create", "update", "delete"],
+        },
+      },
+      "cif.budget_item_category": {
+        tags: {
+          omit: ["delete"],
+        },
+      },
+      "cif.reporting_requirement_status": {
+        tags: {
+          omit: ["delete"],
+        },
+      },
+      "cif.report_type": {
+        tags: {
+          omit: ["delete"],
+        },
+      },
     },
     procedure: {
       "cif.contact_full_name": {
