--- a/chart/cas-cif/templates/route.yaml
+++ b/chart/cas-cif/templates/route.yaml
@@ -1,3 +1,13 @@
+{{- $route := (lookup "route.openshift.io/v1" "Route" .Release.Namespace "cas-cif" ) }}
+{{- $certificate := "" }}
+{{- $key := "" }}
+{{- $caCertificate := "" }}
+{{- if $route }}
+{{- $certificate = $route.spec.tls.certificate }}
+{{- $key = $route.spec.tls.key }}
+{{- $caCertificate = $route.spec.tls.caCertificate }}
+{{- end -}}
+
 apiVersion: route.openshift.io/v1
 kind: Route
 metadata:
@@ -12,6 +22,11 @@ spec:
   tls:
     termination: edge
     insecureEdgeTerminationPolicy: Redirect
+    {{- if $route }}
+    certificate: {{ $certificate | quote }}
+    key: {{ $key | quote }}
+    caCertificate: {{ $caCertificate | quote }}
+    {{- end }}
   to:
     kind: Service
     name: {{ template "cas-cif.fullname" . }}
