--- a/chart/cas-cif/values.yaml
+++ b/chart/cas-cif/values.yaml
@@ -31,17 +31,12 @@ db:
   preUpgradeCommand: ~
 
 hostName: ~
-# set to false to deploy the application with an insecure route,
-# and issue an SSL certificate using acme.sh
-sslTermination: true
-objectNamePrefix: cas-cif
+
 port: 3001
-internalPort: 3000
-caServerSecret: ~ # pragma: allowlist secret
-caServerKey: ~
-caAccountEmail: ggircs@gov.bc.ca
-storageClassName: netapp-file-standard
-renewalDays: 60
+
+certbot:
+  certbot:
+    email: ggircs@gov.bc.ca
 
 resources:
   limits:
