--- a/chart/cas-cif/values-prod.yaml
+++ b/chart/cas-cif/values-prod.yaml
@@ -1,8 +1,10 @@
 hostName: cif.gov.bc.ca
 
-caServerSecret: cas-acme-url
-caServerKey: url
-renewalDays: 305
+certbot:
+  certbot:
+    server:
+      secretName: cas-acme-url
+      secretKey: url
 
 deploy-db:
   airflowEndpoint: https://cas-airflow-prod.apps.silver.devops.gov.bc.ca
