--- a/app/package.json
+++ b/app/package.json
@@ -86,6 +86,7 @@
     "@sentry/react": "^6.18.2",
     "@types/convict": "^6.1.1",
     "@types/convict-format-with-validator": "^6.0.2",
+    "@types/luxon": "^2.3.2",
     "ajv": "^8.9.0",
     "body-parser": "^1.19.0",
     "bowser": "^2.11.0",
@@ -104,6 +105,7 @@
     "helmet": "^4.6.0",
     "json-schema": "^0.4.0",
     "lightship": "^6.7.2",
+    "luxon": "^2.4.0",
     "morgan": "^1.10.0",
     "next": "^12.1.0",
     "normalize.css": "^8.0.1",
