--- a/app/package.json
+++ b/app/package.json
@@ -87,6 +87,7 @@
     "@types/convict": "^6.1.1",
     "@types/convict-format-with-validator": "^6.0.2",
     "@types/luxon": "^2.3.2",
+    "@types/react-datepicker": "^4.4.1",
     "ajv": "^8.9.0",
     "body-parser": "^1.19.0",
     "bowser": "^2.11.0",
@@ -117,6 +118,7 @@
     "postgraphile-plugin-connection-filter": "^2.2.2",
     "postgraphile-plugin-upload-field": "^1.0.0-alpha.10",
     "react": "^17.0.2",
+    "react-datepicker": "^4.7.0",
     "react-dom": "^17.0.2",
     "react-is": "^17.0.2",
     "react-number-format": "^4.9.1",
