--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -80,6 +80,13 @@ jobs:
           echo "PRE_COMMIT_HOME=$GITHUB_WORKSPACE/.pre-commit-cache" >> $GITHUB_ENV
       - name: set PY
         run: echo "PY=$(python -VV | sha256sum | cut -d' ' -f1)" >> $GITHUB_ENV
+      - name: create commitlint COMMIT_EDITMSG if not exists
+        run: |
+          if test -f ".git/COMMIT_EDITMSG"; then \
+              echo "COMMIT_EDITMSG EXISTS, skipping" \
+          else \
+              touch .git/COMMIT_EDITMSG \
+          fi
       - uses: actions/cache@v2
         with:
           path: |
