chore: update relay and mui

--- a/app/package.json
+++ b/app/package.json
@@ -36,7 +36,7 @@
     "@typescript-eslint/parser": "^4.29.3",
     "axe-core": "^4.3.5",
     "babel-plugin-module-resolver": "^4.1.0",
-    "babel-plugin-relay": "^13.0.1",
+    "babel-plugin-relay": "13.2.0",
     "babel-plugin-styled-components": "^1.13.3",
     "cypress": "^8.7.0",
     "cypress-axe": "^0.13.0",
@@ -69,8 +69,8 @@
     "@bcgov-cas/sso-react": "^1.0.1",
     "@bcgov/bc-sans": "^1.0.1",
     "@button-inc/bcgov-theme": "^1.0.1",
-    "@emotion/react": "^11.7.0",
-    "@emotion/styled": "^11.6.0",
+    "@emotion/react": "^11.9.0",
+    "@emotion/styled": "^11.8.1",
     "@fortawesome/fontawesome-svg-core": "^1.2.36",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/react-fontawesome": "^0.1.16",
@@ -80,7 +80,7 @@
     "@graphile-contrib/pg-order-by-related": "^1.0.0-beta.6",
     "@mui/base": "^5.0.0-alpha.59",
     "@mui/icons-material": "^5.4.4",
-    "@mui/material": "^5.2.3",
+    "@mui/material": "^5.7.0",
     "@rjsf/core": "^3.2.0",
     "@sentry/nextjs": "^6.18.2",
     "@sentry/react": "^6.18.2",
@@ -118,12 +118,12 @@
     "react-dom": "^17.0.2",
     "react-is": "^17.0.2",
     "react-number-format": "^4.9.1",
-    "react-relay": "^13.2.0",
+    "react-relay": "13.2.0",
     "react-relay-network-modern": "^6.2.1",
     "react-typography": "^0.16.20",
-    "relay-compiler": "^13.2.0",
+    "relay-compiler": "13.2.0",
     "relay-nextjs": "0.8.0",
-    "relay-runtime": "^13.2.0",
+    "relay-runtime": "13.2.0",
     "relay-test-utils": "^13.2.0",
     "styled-components": "^5.2.1",
     "webpack": "^5.58.2"
