chore: update to relay 13.2.0

--- a/app/package.json
+++ b/app/package.json
@@ -36,7 +36,7 @@
     "@typescript-eslint/parser": "^4.29.3",
     "axe-core": "^4.3.5",
     "babel-plugin-module-resolver": "^4.1.0",
-    "babel-plugin-relay": "^13.0.1",
+    "babel-plugin-relay": "13.2.0",
     "babel-plugin-styled-components": "^1.13.3",
     "cypress": "^8.7.0",
     "cypress-axe": "^0.13.0",
@@ -118,12 +118,12 @@
     "react-dom": "^17.0.2",
     "react-is": "^17.0.2",
     "react-number-format": "^4.9.1",
-    "react-relay": "^13.0.1",
+    "react-relay": "13.2.0",
     "react-relay-network-modern": "^6.2.1",
     "react-typography": "^0.16.20",
-    "relay-compiler": "^13.0.1",
+    "relay-compiler": "13.2.0",
     "relay-nextjs": "0.8.0",
-    "relay-runtime": "^13.0.1",
+    "relay-runtime": "13.2.0",
     "relay-test-utils": "^13.0.1",
     "styled-components": "^5.2.1",
     "webpack": "^5.58.2"
