chore: update relay-test-utils

--- a/app/package.json
+++ b/app/package.json
@@ -124,7 +124,7 @@
     "relay-compiler": "13.2.0",
     "relay-nextjs": "0.8.0",
     "relay-runtime": "13.2.0",
-    "relay-test-utils": "^13.0.1",
+    "relay-test-utils": "13.2.0",
     "styled-components": "^5.2.1",
     "webpack": "^5.58.2"
   },
