--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -50,7 +50,7 @@ jobs:
       - run: yarn build:schema
         working-directory: ./app
       - run: git diff --exit-code || (echo 'The contents of the `schema` folder are out of sync with `app/server/schema.graphql`. Did you forget to \"yarn build:schema\"?' && false)
-  db-unit-tests:
+  db-tests:
     needs: install-dev-tools
     runs-on: ubuntu-latest
     steps:
@@ -58,14 +58,6 @@ jobs:
       - name: dev env setup
         uses: ./.github/actions/dev-env-setup
       - run: make db_unit_tests
-  db-style-tests:
-    needs: install-dev-tools
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - name: dev env setup
-        uses: ./.github/actions/dev-env-setup
-      - run: git submodule update --init
       - run: make db_style_tests
 
   pre-commit:
