--- a/.github/actions/dev-env-setup/action.yml
+++ b/.github/actions/dev-env-setup/action.yml
@@ -39,3 +39,4 @@ runs:
         key: ${{ runner.os }}-yarn-cache-${{ hashFiles('app/yarn.lock') }}-v2
     - name: update submodules
       run: git submodule update --init
+      shell: bash
