--- a/app/package.json
+++ b/app/package.json
@@ -47,6 +47,7 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-import": "^2.25.2",
     "eslint-plugin-jest": "^25.2.1",
+    "eslint-plugin-no-only-tests": "^2.6.0",
     "eslint-plugin-react": "^7.26.1",
     "eslint-plugin-relay": "^1.8.2",
     "happo-cypress": "^3.0.1",
