--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -126,10 +126,17 @@ jobs:
             type=ref,event=pr
       - name: Login to GCR
         uses: docker/login-action@v1
+        if: github.event.pull_request.merged == 'true'
         with:
           registry: gcr.io
           username: _json_key
           password: ${{ secrets.GCR_KEY }}
+      - name: Login to GHCR
+        uses: docker/login-action@v1
+        with:
+          registry: Login to GitHub Container Registry
+          username: ${{ github.repository_owner }}
+          password: ${{ secrets.GITHUB_TOKEN }}
       - name: Cache Docker layers
         uses: actions/cache@v2
         with:
