--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -91,11 +91,11 @@ jobs:
     strategy:
       matrix:
         include:
-          - image: gcr.io/ggl-cas-storage/cas-cif-app
+          - image: ghcr.io/bcgov/cas-cif-app
             context: .
             dockerfile: app/Dockerfile
             name: app
-          - image: gcr.io/ggl-cas-storage/cas-cif-schema
+          - image: ghcr.io/bcgov/cas-cif-schema
             context: .
             dockerfile: schema/Dockerfile
             name: schema
@@ -116,12 +116,12 @@ jobs:
             type=sha,format=long,prefix=
             latest
             type=ref,event=pr
-      - name: Login to GCR
-        uses: docker/login-action@v1
+      - name: Login to GitHub Container Registry
+        uses: docker/login-action@v2
         with:
-          registry: gcr.io
-          username: _json_key
-          password: ${{ secrets.GCR_KEY }}
+          registry: ghcr.io
+          username: ${{ github.repository_owner }}
+          password: ${{ secrets.GITHUB_TOKEN }}
       - name: Cache Docker layers
         uses: actions/cache@v2
         with:
@@ -130,7 +130,7 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-buildx-${{ matrix.name }}
       - name: Build image
-        uses: docker/build-push-action@v2
+        uses: docker/build-push-action@v3
         with:
           context: ${{ matrix.context }}
           builder: ${{ steps.buildx.outputs.name }}
