--- a/.github/actions/local-app-run/action.yaml
+++ b/.github/actions/local-app-run/action.yaml
@@ -8,10 +8,10 @@ runs:
       run: make start_pg && make create_db
     - name: deploy migrations
       shell: bash
-      run: docker run --network=host -e "PGUSER=postgres" gcr.io/ggl-cas-storage/cas-cif-schema:${{ github.sha }} sqitch deploy
+      run: docker run --network=host -e "PGUSER=postgres" ghcr.io/bcgov/cas-cif-schema:${{ github.sha }} sqitch deploy
     - name: deploy mocks_schema migrations
       shell: bash
-      run: docker run --network=host -e "PGUSER=postgres" --workdir="/root/mocks_schema" gcr.io/ggl-cas-storage/cas-cif-schema:${{ github.sha }} sqitch deploy
+      run: docker run --network=host -e "PGUSER=postgres" --workdir="/root/mocks_schema" ghcr.io/bcgov/cas-cif-schema:${{ github.sha }} sqitch deploy
     - name: start app
       shell: bash
-      run: docker run -d --network=host -e "PGUSER=postgres" -p 3004:3004 gcr.io/ggl-cas-storage/cas-cif-app:${{ github.sha }} "/usr/bin/env" "bash" "-c" "ENABLE_MOCK_TIME='true' SHOW_KC_LOGIN='true' ENABLE_MOCK_AUTH='true' yarn start"
+      run: docker run -d --network=host -e "PGUSER=postgres" -p 3004:3004 ghcr.io/bcgov/cas-cif-app:${{ github.sha }} "/usr/bin/env" "bash" "-c" "ENABLE_MOCK_TIME='true' SHOW_KC_LOGIN='true' ENABLE_MOCK_AUTH='true' yarn start"
