--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -30,7 +30,7 @@ repos:
       - id: end-of-file-fixer
         exclude: current_version\.txt
       - id: trailing-whitespace
-        exclude: .*/__snapshots__/.*
+        exclude: .*/__snapshots__/.*|app/schema/.*
   - repo: https://github.com/zricethezav/gitleaks
     rev: v8.2.5
     hooks:
