--- a/.github/workflows/immutable-sqitch-change.yml
+++ b/.github/workflows/immutable-sqitch-change.yml
@@ -10,5 +10,7 @@ jobs:
   check_immutable_files:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
       - run: ./.bin/sqitch-check-immutable-files.sh schema main
