chore: update env example & add api key to e2e action

--- a/app/.env.example
+++ b/app/.env.example
@@ -6,3 +6,4 @@ SENTRY_RELEASE=<any sentry release tag. 'local_development' or anything can be u
 # It needs to be associated with a service account with write permissions
 GOOGLE_APPLICATION_CREDENTIALS=</Users/user/documents/ggl-cas-storage-localdev.json>
 ATTACHMENTS_BUCKET=<the name of the bucket where to read and store attachments>
+GROWTHBOOK_API_KEY=<API key for the growthbook feature flagging service>
