chore: release v1.0.0-rc.1

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cas-cif",
-  "version": "0.0.0",
+  "version": "1.0.0-rc.1",
   "main": "index.js",
   "repository": "https://github.com/bcgov/cas-cif.git",
   "author": "ggircs@gov.bc.ca",
