--- a/chart/cas-cif/values.yaml
+++ b/chart/cas-cif/values.yaml
@@ -29,6 +29,9 @@ db:
   ownerUser: cif
   # A shell script that will be executed in a pre-upgrade job, on the psql image.
   preUpgradeCommand: ~
+  restore:
+    enabled: false
+    targetTimestamp: ~ # The target timestamp to restore the database to. Format: "2021-06-09 09:00:00-07"
 
 hostName: ~
 
