--- a/chart/cas-cif/templates/db-pre-upgrade-job.yaml
+++ b/chart/cas-cif/templates/db-pre-upgrade-job.yaml
@@ -1,3 +1,4 @@
+{{- if not .Values.db.restore.enabled }}
 {{- if .Values.db.preUpgradeCommand }}
 apiVersion: batch/v1
 kind: Job
@@ -35,4 +36,5 @@ spec:
             - |
               set -euo pipefail;
 {{ .Values.db.preUpgradeCommand | indent 14 }}
+{{- end }}
 {{- end }}
