chore: update graphql schema and postgraphile tags file

--- a/app/postgraphile.tags.json5
+++ b/app/postgraphile.tags.json5
@@ -115,6 +115,11 @@
           arg1variant: "patch",
         },
       },
+      "cif.commit_form_change": {
+        tags: {
+          arg1variant: "patch",
+        },
+      },
     },
   },
 }
