chore: add idempotent insert in form schema after each deploy

--- a/chart/cas-cif/templates/cronJobs/deploy-data.yaml
+++ b/chart/cas-cif/templates/cronJobs/deploy-data.yaml
@@ -47,6 +47,7 @@ spec:
                 - |
                   set -euo pipefail;
                   sqitch deploy;
+                  ./data/deploy-data.sh;
                   if [[ "$NAMESPACE" == *-dev ]]; then
                   for file in data/dev/*.sql; do
                     psql -v "ON_ERROR_STOP=1" -d cif -f "${file}";
