refactor: work in progress

--- a/schema/data/prod/json_schema/project_contact.json
+++ b/schema/data/prod/json_schema/project_contact.json
@@ -7,8 +7,7 @@
       "contactId": {
         "title": "Contact",
         "type": "number",
-        "default": "undefined",
-        "anyOf": "undefined"
+        "default": "undefined"
       }
     }
   }
