--- a/schema/data/prod/json_schema/project_manager.json
+++ b/schema/data/prod/json_schema/project_manager.json
@@ -7,8 +7,7 @@
       "cifUserId": {
         "type": "number",
         "title": "Project Manager",
-        "default": "undefined",
-        "anyOf": "undefined"
+        "default": "undefined"
       }
     }
   }
