--- a/schema/data/prod/json_schema/project.json
+++ b/schema/data/prod/json_schema/project.json
@@ -41,8 +41,7 @@
       "operatorId": {
         "type": "number",
         "title": "Legal Operator Name and BC Registry ID",
-        "default": "undefined",
-        "anyOf": "undefined"
+        "default": "undefined"
       },
       "fundingStreamRfpId": {
         "type": "number",
@@ -57,8 +56,7 @@
       "sectorName": {
         "type": "string",
         "title": "Sector",
-        "default": "undefined",
-        "anyOf": "undefined"
+        "default": "undefined"
       },
       "additionalSectorInformation": {
         "type": "string",
