fix: omitting postgraphile delete mutation for project revision

--- a/app/postgraphile.tags.json5
+++ b/app/postgraphile.tags.json5
@@ -75,7 +75,7 @@
       },
       "cif.project_revision": {
         tags: {
-          omit: ["create"],
+          omit: ["create", "delete"],
         },
       },
       "cif.reporting_requirement": {
