feat: update computed columns to include contract number

--- a/schema/data/prod/json_schema/project.json
+++ b/schema/data/prod/json_schema/project.json
@@ -64,6 +64,10 @@
         "type": "string",
         "title": "Additional Sector Information"
       },
+      "contractNumber": {
+        "type": "string",
+        "title": "Contract Number"
+      },
       "comments": {
         "type": "string",
         "title": "General Comments"
