chore: make projects filterable on project_manager_names_concatenated

--- a/app/postgraphile.tags.json5
+++ b/app/postgraphile.tags.json5
@@ -130,6 +130,11 @@
           sortable: true,
         },
       },
+      "cif.project_manager_names_concatenated": {
+        tags: {
+          filterable: true,
+        },
+      },
     },
   },
 }
