chore: update prettierignore

--- a/app/.prettierignore
+++ b/app/.prettierignore
@@ -7,3 +7,4 @@ schema/schema.graphql
 coverage
 ../chart/**/templates/**/*.yaml
 ../database_backup_test/**/templates/**/*.yaml
+../database_backup_test/**/*.yaml
